extends Node2D

func _ready():
	print('3')
func _on_button_pressed():
	get_tree().change_scene_to_file("res://Scenes/level_1.tscn")


func _on_button_2_pressed():
	get_tree().change_scene_to_file("res://terminal.gd")

func _on_button_3_pressed():
	get_tree().change_scene_to_file("res://terminal.gd")


func _on_button_4_pressed():
	get_tree().change_scene_to_file("res://terminal.gd")


func _on_button_5_pressed():
	get_tree().change_scene_to_file("res://terminal.gd")


func _on_button_6_pressed():
	get_tree().change_scene_to_file("res://terminal.gd")


func _on_button_7_pressed():
	get_tree().change_scene_to_file("res://terminal.gd")


func _on_button_8_pressed():
	get_tree().change_scene_to_file("res://terminal.gd")
